fix author dropdown menu and comment order dropdown menu overflow in the mobile screen

--- a/src/app/components/cards/PostFull.scss
+++ b/src/app/components/cards/PostFull.scss
@@ -5,7 +5,6 @@
 }
 
 .PostFull {
-  overflow: hidden;
   padding: 2rem 1rem 1rem 1rem;
   // margin: 0 auto;
   max-width: 54rem;
@@ -64,6 +63,11 @@
     margin-left: 12px;
     position: relative;
     top: -2px;
+    @media only screen and (max-width: 450px) {
+        .Author__container {
+            left: -62px;
+        }
+    }
   }
 }
 
@@ -107,6 +111,7 @@
 }
 
 .PostFull__body {
+  overflow: hidden;
   padding: 1rem 0 1rem 0;
   clear: left;
   a {
